--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -8,4 +8,8 @@
     </style>
 
     <style name="Theme.MyRemembrall" parent="Base.Theme.MyRemembrall" />
+    <style name="NavTheme" parent="Base.Theme.MyRemembrall">
+        <item name="actionMenuTextColor">@color/white</item>
+        <item name="android:actionMenuTextColor">@color/white</item>
+    </style>
 </resources>
